Compile device tree files if any DTSI file changes
git-svn-id: http://casvn/svn/octeon/bdk/branches/thunder@127726 c83883e8-9f28-0410-baf1-f2025811e16a

--- a/boards/Makefile
+++ b/boards/Makefile
@@ -24,5 +24,6 @@ all:  $(DTB_FILES)
 clean:
 	rm -f $(BDK_ROOT)/target-bin/bdk.bin $(DTB_FILES)
 
+%.dts: *.dtsi
 %.dtb: %.dts
 	dtc -I dts -O dtb -o $@ $^
