--- a/boards/crb-2s-common.dtsi
+++ b/boards/crb-2s-common.dtsi
@@ -64,9 +64,9 @@ cavium,bdk {
 		    Each PHY is divided into 4 slices, one per SERDES lane. The
 		    40G port uses all slices, where the 10G ports use one slice
 		    each. PHY Internal address is always zero.
-		    N0.XLAUI0: Slice 0-3 of PHY address 0 (reg through reg + 0x3000)
-		    N0.XFI1.0: Slice 0 of PHY address 1 (reg)
-		    N1.XFI1.0: Slice 1 of PHY address 1 (reg + 0x1000)
+		    N0.XLAUI1: Slice 0-3 of PHY address 0 (reg through reg + 0x3000)
+		    N0.XFI0.0: Slice 0 of PHY address 1 (reg)
+		    N1.XFI0.0: Slice 1 of PHY address 1 (reg + 0x1000)
 
 		    Reset the line side of the PHY. This is register 0x1000,
 		    which is incremented by 0x1000 for each slice.
@@ -127,8 +127,19 @@ cavium,bdk {
 	    Bits[11:8]: TWSI bus number
 	    Bits[7:0]: TWSI address */
 	//PHY-ADDRESS.N%d.BGX%d.P%d = "-1";
-	// BGX0 (QLM0) PHY addresses
-	PHY-ADDRESS.N0.BGX0.P0 = "0xff012356";
+	/* N0.BGX0 (QLM0, Lane 0) upper SFP+ module uses Node 0, TWSI bus 3,
+            addresses 0x50 and 0x56, with one internal address byte. The
+            addresses are only readable when a 1Gbps SFP+ is installed.
+            0x50 is a read only rom, 0x56 are the modules registers. */
+	PHY-ADDRESS.N0.BGX0.P0 = "0x00012356";
+	/* N0.BGX1 (QLM1, Lane 0-3) QSFP+ module uses Node 0, TWSI bus 4,
+            address 0x50. This is currently not used by the BDK */
+	//PHY-ADDRESS.N0.BGX1.P0 = "0x00012450";
+	/* N1.BGX0 (QLM0, Lane 0) lower SFP+ module uses Node 1, TWSI bus 3,
+            addresses 0x50 and 0x56, with one internal address byte. The
+            addresses are only readable when a 1Gbps SFP+ is installed.
+            0x50 is a read only rom, 0x56 are the modules registers. */
+	PHY-ADDRESS.N1.BGX0.P0 = "0x01012356";
 
 	/* Independent enables for each BGX port of THUNDERX. Use this to
 	disable ports that are not wired on a board. Default is that all
