--- a/boards/Makefile
+++ b/boards/Makefile
@@ -24,6 +24,5 @@ all:  $(DTB_FILES)
 clean:
 	rm -f $(BDK_ROOT)/target-bin/bdk.bin $(DTB_FILES)
 
-%.dts: *.dtsi
-%.dtb: %.dts
-	dtc -I dts -O dtb -o $@ $^
+%.dtb: %.dts *.dtsi
+	dtc -I dts -O dtb -o $@ $<
