Update app build to create depends files so apps get rebuilt with header changes

--- a/apps/init/Makefile
+++ b/apps/init/Makefile
@@ -4,6 +4,8 @@ init.bin: app.bin
 	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
+%.o: %.d
+-include app.d
 
 clean:
-	rm -f *.o *.map *.bin app
+	rm -f *.o *.d *.map *.bin app
