--- a/apps/setup/Makefile
+++ b/apps/setup/Makefile
@@ -3,11 +3,15 @@ include $(BDK_ROOT)/libbdk/bdk.mk
 SRC =app.c
 SRC+=$(wildcard menu-*.c)
 OBJ=$(SRC:.c=.o)
+DEPS=$(SRC:.c=.d)
+DEPS+=$(BDK_ROOT)/libbdk/bdk.d
 
 setup.bin: app.bin
 	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^
 
 app: $(OBJ) $(BDK_ROOT)/libbdk/libbdk.a
+%.o: %.d
+-include $(DEPS)
 
 clean:
-	rm -f $(OBJ) *.map *.bin app
+	rm -f $(OBJ) *.d *.map *.bin app
