--- a/apps/boot/Makefile
+++ b/apps/boot/Makefile
@@ -5,6 +5,8 @@ boot.bin: app.bin
 	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
+%.o: %.d
+-include app.d
 
 clean:
-	rm -f *.o *.map *.bin app
+	rm -f *.o *.d *.map *.bin app
