--- a/apps/diagnostics/Makefile
+++ b/apps/diagnostics/Makefile
@@ -4,6 +4,8 @@ diagnostics.bin: app.bin lua/*
 	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^ lua/*
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
+%.o: %.d
+-include app.d
 
 clean:
-	rm -f *.o *.map *.bin app
+	rm -f *.o *.d *.map *.bin app
