[cortina] Add the app.c file and hook everything up in the various Makefiles.

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -5,6 +5,7 @@ all:
 	${MAKE} -C diagnostics
 	${MAKE} -C init
 	${MAKE} -C setup
+	${MAKE} -C cortina
 
 .PHONY: clean
 clean:
@@ -12,4 +13,5 @@ clean:
 	${MAKE} -C diagnostics clean
 	${MAKE} -C init clean
 	${MAKE} -C setup clean
+	${MAKE} -C cortina clean
 
