--- a/boards/crb-1s.dts
+++ b/boards/crb-1s.dts
@@ -47,7 +47,8 @@ cavium,bdk {
 		    Pin 1.3: SFP_TX_DISABLE_0=0
 		    Pin 1.7: SFP_TX_DISABLE_1=0 */
 		"-1,0,0x20,0x2,1,1,0x70",
-		"-1,0,0x20,0x3,1,1,0x00";
+		"-1,0,0x20,0x3,1,1,0x00",
+                "sleep,100"; /* Delay 100ms to allow reset to complete before MDIO accesses */
 
 	/* Allow a sequence of MDIO writes to be performed during boot. Each
 	string in the list line is executed in sequence. The MDIO write
