[config][cortina] Move cortina update from crb-2s common to crb-2s DTS file.
This change is so other boards can share the common crb-2s config without running
the Cortina PHY updater.

--- a/boards/crb-2s-evt2.dts
+++ b/boards/crb-2s-evt2.dts
@@ -29,6 +29,9 @@ cavium,bdk {
 	during boot. This should be used in combination with the watchdog
 	timer. */
 	DDR-TEST-BOOT = "1";
+
+	/* The boot stage to be loaded after init.bin has run. */
+	BDK-CONFIG-BOOT-NEXT-STAGE-INIT = "/fatfs/cortina-app.bin";
 };
 };
 
