--- a/boards/ddr4-common.dtsi
+++ b/boards/ddr4-common.dtsi
@@ -41,14 +41,9 @@ cavium,bdk {
 	    N#: Parameter can be different for each node. This specifies
 	        which node the value is for. Node must be 0-3. Optional. */
 	//DDR-CONFIG-SPD-ADDR.DIMM%d.LMC%d.N%d = "0";
-	DDR-CONFIG-SPD-ADDR.DIMM1.LMC3 = "0x1057";
-	DDR-CONFIG-SPD-ADDR.DIMM0.LMC3 = "0x1056";
-	DDR-CONFIG-SPD-ADDR.DIMM1.LMC2 = "0x1055";
-	DDR-CONFIG-SPD-ADDR.DIMM0.LMC2 = "0x1054";
-	DDR-CONFIG-SPD-ADDR.DIMM1.LMC1 = "0x1053";
-	DDR-CONFIG-SPD-ADDR.DIMM0.LMC1 = "0x1052";
-	DDR-CONFIG-SPD-ADDR.DIMM1.LMC0 = "0x1051";
-	DDR-CONFIG-SPD-ADDR.DIMM0.LMC0 = "0x1050";
+        // Note: The SPD addresses are not specified here so boards don't
+        // inherit a default. The default causes trouble with UEFI when it
+        // builds SMBIOS tables.
 
 	/* DIMM SPD data to be used if memory doesn't support the standard
 	TWSI access to DIMM SPDs. The format of this is a binary blob
