Do not build dependencies for clean and distclean targets

--- a/apps/boot/Makefile
+++ b/apps/boot/Makefile
@@ -6,7 +6,11 @@ boot.bin: app.bin
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
 %.o: %.d
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),distclean)
 -include app.d
+endif
+endif
 
 clean:
 	rm -f *.o *.d *.map *.bin app
