--- a/apps/diagnostics/Makefile
+++ b/apps/diagnostics/Makefile
@@ -5,7 +5,11 @@ diagnostics.bin: app.bin lua/*
 
 app: app.o $(BDK_ROOT)/libbdk/libbdk.a
 %.o: %.d
+ifneq ($(MAKECMDGOALS),clean)
+ifneq ($(MAKECMDGOALS),distclean)
 -include app.d
+endif
+endif
 
 clean:
 	rm -f *.o *.d *.map *.bin app
