Change 83xx in asim to use DXAUI on QLM3. This allows the existing DXAUI test to work

--- a/boards/asim-cn83xx.dts
+++ b/boards/asim-cn83xx.dts
@@ -33,7 +33,7 @@ cavium,bdk {
 	    40G_KR4_1X4 */
 	QLM-MODE.N0.QLM0 = "PCIE_1X8";
 	QLM-MODE.N0.QLM2 = "XFI_4X1";
-	QLM-MODE.N0.QLM3 = "XLAUI_1X4";
+	QLM-MODE.N0.QLM3 = "XAUI_1X4";
 	QLM-MODE.N0.QLM4 = "SATA_2X1";
 	QLM-MODE.N0.QLM5 = "XLAUI_1X4";
 
@@ -48,7 +48,7 @@ cavium,bdk {
 	QLM-FREQ.N0.QLM0 = "8000";
 	QLM-FREQ.N0.QLM1 = "8000";
 	QLM-FREQ.N0.QLM2 = "10312";
-	QLM-FREQ.N0.QLM3 = "10312";
+	QLM-FREQ.N0.QLM3 = "6250";
 	QLM-FREQ.N0.QLM4 = "6000";
 	QLM-FREQ.N0.QLM5 = "10312";
 	QLM-FREQ.N0.QLM6 = "10312";
