--- a/boards/crb-2s-common.dtsi
+++ b/boards/crb-2s-common.dtsi
@@ -511,7 +511,8 @@ cavium,bdk {
 	 *   GPIO-VAR-NAME = 0x01001A
 	 *                     ||||||
 	 *                     ||||++-- GPIO Number
-	 *                     ||++---- GPIO polarity (0=normal, 1=inverted)
+	 *                     |||+---- GPIO polarity (0=normal, 1=inverted)
+	 *                     ||+----- GPIO type (0=level, 1=edge)
 	 *                     ++------ Node ID (0xFF = local node)
 	 *
 	 **********************************************************************/
@@ -527,7 +528,7 @@ cavium,bdk {
 
 	/* GPIO pin connected to board power button */
 	//GPIO-SHUTDOWN-CTL-IN = "-1";
-	GPIO-SHUTDOWN-CTL-IN = "0x000011";
+	GPIO-SHUTDOWN-CTL-IN = "0x001011";
 
 	/* GPIO pin to CPLD-BMC from Thunder to inform host initiated shutdown */
 	//GPIO-SHUTDOWN-CTL-OUT = "-1";
