--- a/boards/ebb8804-common.dtsi
+++ b/boards/ebb8804-common.dtsi
@@ -287,7 +287,8 @@ cavium,bdk {
 	 *   GPIO-VAR-NAME = 0x01001A
 	 *                     ||||||
 	 *                     ||||++-- GPIO Number
-	 *                     ||++---- GPIO polarity (0=normal, 1=inverted)
+	 *                     |||+---- GPIO polarity (0=normal, 1=inverted)
+	 *                     ||+----- GPIO type (0=level, 1=edge)
 	 *                     ++------ Node ID (0xFF = local node)
 	 *
 	 **********************************************************************/
