Device tree fixup for Linux
The SDK wants to push all board specific infirmation into the BDK so
ATF, UEFI, and Uboot can be generic. To support this, the BDK will
load a device tree from FAT and pass it to ATF. The device tree may
be generic for Thunder, which means all possible SOC configs are
present. The BDK must prune out unused entries before passing the
tree to ATF.

--- a/apps/init/Makefile
+++ b/apps/init/Makefile
@@ -3,11 +3,11 @@ include $(BDK_ROOT)/libbdk/bdk.mk
 init.bin: app.bin
 	$(BDK_ROOT)/bin/bdk-update-romfs $@ $^
 
-app: app.o $(BDK_ROOT)/libbdk/libbdk.a
+app: app.o devtree.o $(BDK_ROOT)/libbdk/libbdk.a
 %.o: %.d
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(MAKECMDGOALS),distclean)
--include app.d
+-include app.d devtree.d
 endif
 endif
 
